@@ -1,4 +1,4 @@
-Changelog started November 2006; Currently at version 0.8.1
+Changelog started November 2006; Currently at version 0.9
 
 Legend:
 --------------------------------------------------------------------------------
@@ -9,6 +9,13 @@ Legend:
  - Feature or option removal.
  % Development flag or note, such as branching.
 
+
+Pretty URLs 0.9                                                 ??
+================================================================================
+ % Branched off 0.8 so that changes for 2.0 support won't get confused with everything else.
+ ! Base: Some colour changes were needed for dark themes. (chrome.css)
+ - Base: Removed the cache table's log_time column as it's not used anymore.
+ ! Base: Some futher changes for 2.0 Beta 3 support were required.
 
 Pretty URLs 0.8.1                                                 22 March, 2008
 ================================================================================
